--- a/bootstrap.html
+++ b/bootstrap.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Bootstrap</h1>
-    <img src = "bootstrap.png" alt="bootstrap logo" width = "250px" height="250px"> </img>
+    <img src = "./bootstrap.png" alt="bootstrap logo" width = "250px" height="250px"> </img>
     <ul>
         <li>Bootstrap is a free and open-source CSS framework used to build responsive and mobile-first websites.</li>
         <li>It includes pre-designed components like buttons, forms, navbars, modals, and more.</li>    
