--- a/css.html
+++ b/css.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Cascading Style Sheets (CSS)</h1>
-    <img src = "css.webp" alt="css logo" width = "200px" height="200px"> </img>
+    <img src = "./css.webp" alt="css logo" width = "200px" height="200px"> </img>
     <ul>
         <li>CSS (Cascading Style Sheets) is used to style and design HTML elements on web pages.</li>
         <li>It controls the layout, colors, fonts, spacing, and overall appearance of a website.</li>
