--- a/framework.html
+++ b/framework.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Frameworks</h1>
-    <img src = "javaframework.png" alt="framework logo" width = "250px" height="250px"> </img>
+    <img src = "./javaframework.png" alt="framework logo" width = "250px" height="250px"> </img>
     <ul>
        <li>A framework is a pre-written set of tools and libraries that helps developers build applications faster and more efficiently.</li>
        <li>It provides a structured foundation, so developers don’t need to code everything from scratch.</li>
