--- a/html.html
+++ b/html.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Hyper Text Markup Language (HTML)</h1>
-    <img src = "html.jpg" alt="html logo" width = "200px" height="200px"> </img>
+    <img src = "./html.jpg" alt="html logo" width = "200px" height="200px"> </img>
     <ul>
         <li>HTML is the standard language used to create and design web pages.</li>
          <li>HTML is the starting point for creating websites. Understanding HTML is crucial for any web development or web design role.</li>
