--- a/java.html
+++ b/java.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Java (programming language)</h1>
-    <img src = "java.png" alt="java logo" width = "234px" height="428px"> </img>
+    <img src = "./java.png" alt="java logo" width = "234px" height="428px"> </img>
     <ul>
         <li>Java is a high-level, general-purpose, memory-safe, object-oriented programming language.</li>
          <li>It is intended to let programmers write once, run anywhere (WORA), meaning 
