--- a/js.html
+++ b/js.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>JavaScript</h1>
-    <img src = "js.png" alt="js logo" width = "200px" height="200px"> </img>
+    <img src = "./js.png" alt="js logo" width = "200px" height="200px"> </img>
     <ul>
         <li>JavaScript is a scripting language used to make web pages interactive (e.g., forms, buttons, animations).</li>
         <li>It runs in the browser, allowing dynamic changes to HTML and CSS without reloading the page.</li>    
