--- a/mongodb.html
+++ b/mongodb.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>MongoDB</h1>
-    <img src = "mongodb.webp" alt="MongoDB logo" width = "250px" height="250px"> </img>
+    <img src = "./mongodb.webp" alt="MongoDB logo" width = "250px" height="250px"> </img>
     <ul>
        <li>MongoDB is a NoSQL database that stores data in JSON-like documents instead of traditional tables.</li>
        <li>It is schema-less, allowing flexible and dynamic data structures.</li>
