--- a/nodejs.html
+++ b/nodejs.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Node.js</h1>
-    <img src = "nodejs.webp" alt="nodejs logo" width = "250px" height="250px"> </img>
+    <img src = "./nodejs.webp" alt="nodejs logo" width = "250px" height="250px"> </img>
     <ul>
        <li>Node.js is a JavaScript runtime built on Chrome's V8 engine, allowing JavaScript to run outside the browser.</li>
        <li>It is used for building fast and scalable server-side applications.</li>
