--- a/python.html
+++ b/python.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Python</h1>
-    <img src = "python.webp" alt="python logo" width = "250px" height="250px"> </img>
+    <img src = "./python.webp" alt="python logo" width = "250px" height="250px"> </img>
     <ul>
         <li>Python is a high-level, interpreted programming language known for its simplicity and readability.</li>
         <li>It supports multiple programming paradigms like object-oriented, procedural, and functional programming.</li>
