--- a/spring.html
+++ b/spring.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Spring</h1>
-    <img src = "springlogo.png" alt="spring logo" width = "250px" height="250px"> </img>
+    <img src = "./springlogo.png" alt="spring logo" width = "250px" height="250px"> </img>
     <ul>
       <li>Spring is a powerful, open-source Java framework used for building enterprise-level applications.</li>
       <li>It supports dependency injection and inversion of control, which make code more modular and testable.</li>
