--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Programming languages in fswd</title>
+    <title>Technologies in fswd</title>
 </head>
 <body>
-    <h1>List of Programming Languages</h1>
+    <h1>List of Technologies in FSWB</h1>
     <ul>
         <li>Front-End Web Development</li>
         <ul>
